force-app/main/default/objects/SalesManagement__c/fields/Other_history_content__c.field-meta.xml
<CustomField>
    <fullName>Other_history_content__c</fullName>
    <label>その他経緯内容</label>
    <type>TextArea</type>
</CustomField>