force-app/main/default/objects/SalesManagement__c/fields/OtherAA__c.field-meta.xml
<CustomField>
    <fullName>OtherAA__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.OtherAA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>他社オク出品</label>
    <type>Checkbox</type>
</CustomField>