force-app/main/default/objects/SalesManagement__c/fields/OtherMailing__c.field-meta.xml
<CustomField>
    <fullName>OtherMailing__c</fullName>
    <label>郵送その他</label>
    <length>30</length>
    <type>Text</type>
</CustomField>