force-app/main/default/objects/SalesManagement__c/fields/OtherSite__c.field-meta.xml
<CustomField>
    <fullName>OtherSite__c</fullName>
    <label>現地その他</label>
    <length>30</length>
    <type>Text</type>
</CustomField>