force-app/main/default/objects/SalesManagement__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>与儀</description>
    <formula>IF( Owner:Queue.DeveloperName = &quot;SalesManagement_NotCompatible&quot; ,&quot;営業管理未対応キュー&quot; , Owner:User.LastName +&quot; &quot;+ Owner:User.FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>所有者</label>
    <type>Text</type>
</CustomField>