force-app/main/default/objects/SalesManagement__c/fields/Payee_A__c.field-meta.xml
<CustomField>
    <fullName>Payee_A__c</fullName>
    <description>与儀</description>
    <label>振込先A</label>
    <length>50</length>
    <type>Text</type>
</CustomField>