force-app/main/default/objects/SalesManagement__c/fields/Payment_date__c.field-meta.xml
<CustomField>
    <fullName>Payment_date__c</fullName>
    <description>売契情報</description>
    <label>支払日</label>
    <type>Date</type>
</CustomField>