force-app/main/default/objects/SalesManagement__c/fields/payment_notice_confirmation_date__c.field-meta.xml
<CustomField>
    <fullName>payment_notice_confirmation_date__c</fullName>
    <description>自税納付書を確認した日を営業管理で入力する。山本</description>
    <label>自動車税納付書確認日</label>
    <type>Date</type>
</CustomField>