force-app/main/default/objects/SalesManagement__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.PaymentDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>支払い日</label>
    <type>Date</type>
</CustomField>