force-app/main/default/objects/SalesManagement__c/fields/PaymentInformation__c.field-meta.xml
<CustomField>
    <fullName>PaymentInformation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>売契情報</description>
    <label>書類確認後入金日のご案内をさせて頂きます。</label>
    <type>Checkbox</type>
</CustomField>