force-app/main/default/objects/SalesManagement__c/fields/Personal_transfer_flag__c.field-meta.xml
<CustomField>
    <fullName>Personal_transfer_flag__c</fullName>
    <label>1回限りの振込</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>免税事業者（CC1/CC2）</fullName>
            </value>
            <value>
                <fullName>適格請求書発行事業者（CC1001/CC2001）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>