force-app/main/default/objects/SalesManagement__c/fields/Pickup_all_history__c.field-meta.xml
<CustomField>
    <fullName>Pickup_all_history__c</fullName>
    <label>引取経緯</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>