force-app/main/default/objects/SalesManagement__c/fields/Pickup_Contact_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Contact_Timezone__c</fullName>
    <description>与儀</description>
    <label>連絡時間帯/営業時間（引取）</label>
    <length>25</length>
    <type>Text</type>
</CustomField>