force-app/main/default/objects/SalesManagement__c/fields/Pickup_history_content__c.field-meta.xml
<CustomField>
    <fullName>Pickup_history_content__c</fullName>
    <label>引取経緯内容</label>
    <type>TextArea</type>
</CustomField>