force-app/main/default/objects/SalesManagement__c/fields/Pickup_precautions__c.field-meta.xml
<CustomField>
    <fullName>Pickup_precautions__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.Pickup_precautions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>業者/ドライバーへの連絡事項</label>
    <type>Text</type>
</CustomField>