force-app/main/default/objects/SalesManagement__c/fields/Pickup_Preferred_date__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Preferred_date__c</fullName>
    <description>与儀</description>
    <label>引取希望日1</label>
    <type>Date</type>
</CustomField>