force-app/main/default/objects/SalesManagement__c/fields/Pickup_RegularHoliday__c.field-meta.xml
<CustomField>
    <fullName>Pickup_RegularHoliday__c</fullName>
    <description>与儀</description>
    <label>保管先の定休日</label>
    <length>25</length>
    <type>Text</type>
</CustomField>