force-app/main/default/objects/SalesManagement__c/fields/Pickup_status__c.field-meta.xml
<CustomField>
    <fullName>Pickup_status__c</fullName>
    <label>引取ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未手配</fullName>
                <default>true</default>
                <label>未手配</label>
            </value>
            <value>
                <fullName>手配中</fullName>
            </value>
            <value>
                <fullName>手配済</fullName>
            </value>
            <value>
                <fullName>連絡済</fullName>
            </value>
            <value>
                <fullName>指示書作成済</fullName>
            </value>
            <value>
                <fullName>引取完了</fullName>
            </value>
            <value>
                <fullName>保留</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>案件キャンセル</fullName>
            </value>
            <value>
                <fullName>入力待ち</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>