force-app/main/default/objects/SalesManagement__c/fields/PO_Owner__c.field-meta.xml
<CustomField>
    <fullName>PO_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>営業担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_SalesManagement</relationshipName>
    <type>Lookup</type>
</CustomField>