force-app/main/default/objects/SalesManagement__c/fields/PO_Owner_Branch__c.field-meta.xml
<CustomField>
    <fullName>PO_Owner_Branch__c</fullName>
    <description>買取商談の所有者の部署を表示。山本</description>
    <formula>PurchaseOpportunity__r.Department__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>営業担当_部署</label>
    <type>Text</type>
</CustomField>