force-app/main/default/objects/SalesManagement__c/fields/PostProcessing__c.field-meta.xml
<CustomField>
    <fullName>PostProcessing__c</fullName>
    <description>与儀</description>
    <label>後処理送付</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>郵送</fullName>
            </value>
            <value>
                <fullName>営業対応</fullName>
            </value>
            <value>
                <fullName>FAX</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>