force-app/main/default/objects/SalesManagement__c/fields/pre_Ledger_supplierName__c.field-meta.xml
<CustomField>
    <fullName>pre_Ledger_supplierName__c</fullName>
    <formula>PurchaseOpportunity__r.Ledger_supplierName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>台帳仕入先名</label>
    <type>Text</type>
</CustomField>