force-app/main/default/objects/SalesManagement__c/fields/pre_Personal_transfer_flag__c.field-meta.xml
<CustomField>
    <fullName>pre_Personal_transfer_flag__c</fullName>
    <description>与儀</description>
    <formula>TEXT(PurchaseOpportunity__r.Personal_transfer_flag__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1回限りの振込</label>
    <type>Text</type>
</CustomField>