force-app/main/default/objects/SalesManagement__c/fields/Precautions_Memo__c.field-meta.xml
<CustomField>
    <fullName>Precautions_Memo__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.Precautions_Memo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>物流/MVRへの連絡事項</label>
    <type>Text</type>
</CustomField>