force-app/main/default/objects/SalesManagement__c/fields/PreTransfer__c.field-meta.xml
<CustomField>
    <fullName>PreTransfer__c</fullName>
    <formula>Account__r.PreTransfer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>先振込企業</label>
    <type>Checkbox</type>
</CustomField>