force-app/main/default/objects/SalesManagement__c/fields/Prior_contact__c.field-meta.xml
<CustomField>
    <fullName>Prior_contact__c</fullName>
    <description>与儀</description>
    <label>引取前連絡担当</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>営業</fullName>
            </value>
            <value>
                <fullName>管理課</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>