force-app/main/default/objects/SalesManagement__c/fields/Privatehome_name__c.field-meta.xml
<CustomField>
    <fullName>Privatehome_name__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.StorageLocation_Oppotunity__c</formula>
    <label>保管先名（個人宅・その他）</label>
    <type>Text</type>
</CustomField>