force-app/main/default/objects/SalesManagement__c/fields/ProcessingDivision__c.field-meta.xml
<CustomField>
    <fullName>ProcessingDivision__c</fullName>
    <description>与儀</description>
    <formula>TEXT(PurchaseOpportunity__r.ProcessingDivision__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>処理区分</label>
    <type>Text</type>
</CustomField>