force-app/main/default/objects/SalesManagement__c/fields/ProcessingDivision_flow__c.field-meta.xml
<CustomField>
    <fullName>ProcessingDivision_flow__c</fullName>
    <description>フローで使用する用に作成。山本</description>
    <label>ProcessingDivision_flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>抹消</fullName>
            </value>
            <value>
                <fullName>抹消済</fullName>
            </value>
            <value>
                <fullName>名変</fullName>
            </value>
            <value>
                <fullName>中販名変</fullName>
            </value>
            <value>
                <fullName>直だし名変</fullName>
            </value>
            <value>
                <fullName>ソコトレ輸出抹消</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>