force-app/main/default/objects/SalesManagement__c/fields/Purchase_condition__c.field-meta.xml
<CustomField>
    <fullName>Purchase_condition__c</fullName>
    <description>売契情報</description>
    <label>買取条件</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>名変</fullName>
            </value>
            <value>
                <fullName>一時抹消</fullName>
            </value>
            <value>
                <fullName>永久抹消</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>