force-app/main/default/objects/SalesManagement__c/fields/PurchaseOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>買取商談</label>
    <referenceTo>PurchaseOpportunity__c</referenceTo>
    <relationshipLabel>営業管理</relationshipLabel>
    <relationshipName>SalesManagement_PurchaseOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>