force-app/main/default/objects/SalesManagement__c/fields/RecyclingFee__c.field-meta.xml
<CustomField>
    <fullName>RecyclingFee__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.RecyclingFee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リサイクル料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>