force-app/main/default/objects/SalesManagement__c/fields/ReFAX__c.field-meta.xml
<CustomField>
    <fullName>ReFAX__c</fullName>
    <description>与儀</description>
    <label>ReFAX確認日</label>
    <type>Date</type>
</CustomField>