force-app/main/default/objects/SalesManagement__c/fields/RegistrationNo_OK__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNo_OK__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.RegistrationNo_OK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ナンバープレート情報</label>
    <type>Text</type>
</CustomField>