force-app/main/default/objects/SalesManagement__c/fields/Regular_holiday__c.field-meta.xml
<CustomField>
    <fullName>Regular_holiday__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.Regular_holiday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>搬出先の定休日</label>
    <type>Text</type>
</CustomField>