force-app/main/default/objects/SalesManagement__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>与儀</description>
    <label>引取連絡事項</label>
    <type>TextArea</type>
</CustomField>