force-app/main/default/objects/SalesManagement__c/fields/RepairCar__c.field-meta.xml
<CustomField>
    <fullName>RepairCar__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.RepairCar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>修理車両</label>
    <type>Checkbox</type>
</CustomField>