force-app/main/default/objects/SalesManagement__c/fields/RequestCompany__c.field-meta.xml
<CustomField>
    <fullName>RequestCompany__c</fullName>
    <description>与儀</description>
    <label>引取依頼業者</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RequestDestination__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ゼロ</fullName>
            </value>
            <value>
                <fullName>テイクオフ（東京）</fullName>
            </value>
            <value>
                <fullName>テイクオフ（名古屋）</fullName>
            </value>
            <value>
                <fullName>テイクオフ（神戸）</fullName>
            </value>
            <value>
                <fullName>㈱TCS　仙台支店</fullName>
            </value>
            <value>
                <fullName>㈱TCS　野田支店</fullName>
            </value>
            <value>
                <fullName>㈱TCS　千葉支店</fullName>
            </value>
            <value>
                <fullName>㈱TCS　本社</fullName>
            </value>
            <value>
                <fullName>㈱TCS　静岡支店</fullName>
            </value>
            <value>
                <fullName>㈱TCS　名古屋支店</fullName>
            </value>
            <value>
                <fullName>㈱TCS　神戸支店</fullName>
            </value>
            <value>
                <fullName>㈱TCS　福岡支店</fullName>
            </value>
            <value>
                <fullName>有限会社カイザー</fullName>
            </value>
            <value>
                <fullName>旧フロー_ゼロ</fullName>
            </value>
            <value>
                <fullName>まるおモータース</fullName>
            </value>
            <value>
                <fullName>美島自動車</fullName>
            </value>
            <value>
                <fullName>アドーレジャパン</fullName>
            </value>
            <value>
                <fullName>京王自動車工業</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>佐久間オートサービス</fullName>
            </value>
            <value>
                <fullName>㈱アライロジスティックス</fullName>
            </value>
            <value>
                <fullName>プロテクト</fullName>
            </value>
            <value>
                <fullName>パブリックレッカー</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>