force-app/main/default/objects/SalesManagement__c/fields/RequestDestination__c.field-meta.xml
<CustomField>
    <fullName>RequestDestination__c</fullName>
    <label>段取対応部署</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>営業</fullName>
                <label>営業（自走可　ゼロ・テイクオフにて引取）</label>
            </value>
            <value>
                <fullName>物流</fullName>
                <label>物流（ゼロ以外　トラック・自社・その他外注業者で引取）</label>
            </value>
            <value>
                <fullName>MVR</fullName>
                <label>MVR（BC車輌の引取）</label>
            </value>
            <value>
                <fullName>リユース</fullName>
                <label>リユース（休日至急手配）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>