force-app/main/default/objects/SalesManagement__c/fields/RequestDetail__c.field-meta.xml
<CustomField>
    <fullName>RequestDetail__c</fullName>
    <label>売契作成時備考</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>