force-app/main/default/objects/SalesManagement__c/fields/Requestform__c.field-meta.xml
<CustomField>
    <fullName>Requestform__c</fullName>
    <description>買取商談の依頼書送信日（サポート送信分）か、引取依頼の依頼書送信日（物流送信分）の日付どちらかが入ったら反映させる。与儀</description>
    <formula>BLANKVALUE(PurchaseOpportunity__r.Requestform__c, PurchaseOpportunity__r.PickupRequest_toLogistics__r.Requestform__c)</formula>
    <label>依頼書送信日</label>
    <type>Date</type>
</CustomField>