force-app/main/default/objects/SalesManagement__c/fields/Residual_bond__c.field-meta.xml
<CustomField>
    <fullName>Residual_bond__c</fullName>
    <description>売契情報</description>
    <label>残債</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>