force-app/main/default/objects/SalesManagement__c/fields/return_document__c.field-meta.xml
<CustomField>
    <fullName>return_document__c</fullName>
    <description>営業管理引継ぎ画面で入力される。山本</description>
    <label>搬入先からの書類返送（ナンバー以外）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>不要</fullName>
                <default>true</default>
                <label>不要</label>
            </value>
            <value>
                <fullName>必要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>