force-app/main/default/objects/SalesManagement__c/fields/run_dist__c.field-meta.xml
<CustomField>
    <fullName>run_dist__c</fullName>
    <description>売契情報</description>
    <label>走行距離</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>