force-app/main/default/objects/SalesManagement__c/fields/run_dist_unit__c.field-meta.xml
<CustomField>
    <fullName>run_dist_unit__c</fullName>
    <description>山本</description>
    <label>走行距離単位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>km</fullName>
            </value>
            <value>
                <fullName>mile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>