force-app/main/default/objects/SalesManagement__c/fields/sales_tax__c.field-meta.xml
<CustomField>
    <fullName>sales_tax__c</fullName>
    <formula>PurchaseOpportunity__r.sales_tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>内税（消費税額）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>