force-app/main/default/objects/SalesManagement__c/fields/SalesManagement_Memo__c.field-meta.xml
<CustomField>
    <fullName>SalesManagement_Memo__c</fullName>
    <description>与儀</description>
    <label>営業管理メモ</label>
    <type>TextArea</type>
</CustomField>