force-app/main/default/objects/SalesManagement__c/fields/SalesManagementID_18__c.field-meta.xml
<CustomField>
    <fullName>SalesManagementID_18__c</fullName>
    <formula>CASESAFEID (Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>営業管理ID(18ケタ)</label>
    <type>Text</type>
</CustomField>