force-app/main/default/objects/SalesManagement__c/fields/ScheduleAdjustmentCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduleAdjustmentCompletedDate__c</fullName>
    <label>日程調整完了日</label>
    <type>Date</type>
</CustomField>