force-app/main/default/objects/SalesManagement__c/fields/ScheduledPickupDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledPickupDate__c</fullName>
    <formula>PurchaseOpportunity__r.ScheduledPickupDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>引取予定日</label>
    <type>Date</type>
</CustomField>