force-app/main/default/objects/SalesManagement__c/fields/setting_content__c.field-meta.xml
<CustomField>
    <fullName>setting_content__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.setting_content__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取・メン・保・スペア</label>
    <type>Text</type>
</CustomField>