force-app/main/default/objects/SalesManagement__c/fields/shift__c.field-meta.xml
<CustomField>
    <fullName>shift__c</fullName>
    <description>営業管理へ引継ぎ時に入力される。引取依頼で中古車輸送課が参照する。山本</description>
    <label>シフト</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>