force-app/main/default/objects/SalesManagement__c/fields/signboard_peeling__c.field-meta.xml
<CustomField>
    <fullName>signboard_peeling__c</fullName>
    <description>営業管理引継ぎ画面で入力される。オーダー自動作成APIの連携項目。山本</description>
    <label>剥離</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>不要</fullName>
                <default>true</default>
                <label>不要</label>
            </value>
            <value>
                <fullName>養生・ガムテ</fullName>
            </value>
            <value>
                <fullName>塗抹（塗りつぶし）</fullName>
            </value>
            <value>
                <fullName>完全剥離</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>