force-app/main/default/objects/SalesManagement__c/fields/Space__c.field-meta.xml
<CustomField>
    <fullName>Space__c</fullName>
    <description>与儀</description>
    <label>スペース有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>あり</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>