force-app/main/default/objects/SalesManagement__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>与儀</description>
    <formula>TEXT(PurchaseOpportunity__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>状態</label>
    <type>Text</type>
</CustomField>