force-app/main/default/objects/SalesManagement__c/fields/Storage_category__c.field-meta.xml
<CustomField>
    <fullName>Storage_category__c</fullName>
    <description>与儀</description>
    <label>保管先カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>取引先と同じ</fullName>
            </value>
            <value>
                <fullName>SF登録済み業者から探す</fullName>
            </value>
            <value>
                <fullName>車検証 所有者と同じ</fullName>
            </value>
            <value>
                <fullName>車検証 使用者と同じ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>