force-app/main/default/objects/SalesManagement__c/fields/Storage_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Storage_Confirmation__c</fullName>
    <description>与儀</description>
    <label>保管先確認担当_不要</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>営業</fullName>
            </value>
            <value>
                <fullName>管理課</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>