force-app/main/default/objects/SalesManagement__c/fields/StorageLocation__c.field-meta.xml
<CustomField>
    <fullName>StorageLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>与儀</description>
    <label>保管先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>営業管理</relationshipLabel>
    <relationshipName>StorageLocation</relationshipName>
    <type>Lookup</type>
</CustomField>