force-app/main/default/objects/SalesManagement__c/fields/StorageLocation_Person__c.field-meta.xml
<CustomField>
    <fullName>StorageLocation_Person__c</fullName>
    <description>与儀</description>
    <label>保管先担当者</label>
    <length>50</length>
    <type>Text</type>
</CustomField>