force-app/main/default/objects/SalesManagement__c/fields/StorageLocationAddress__c.field-meta.xml
<CustomField>
    <fullName>StorageLocationAddress__c</fullName>
    <description>与儀</description>
    <label>保管先住所</label>
    <length>50</length>
    <type>Text</type>
</CustomField>