force-app/main/default/objects/SalesManagement__c/fields/StorageLocationTell__c.field-meta.xml
<CustomField>
    <fullName>StorageLocationTell__c</fullName>
    <description>与儀</description>
    <label>保管先電話番号</label>
    <type>Phone</type>
</CustomField>