force-app/main/default/objects/SalesManagement__c/fields/SummaryAccount__c.field-meta.xml
<CustomField>
    <fullName>SummaryAccount__c</fullName>
    <formula>PurchaseOpportunity__r.SummaryAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>集計先</label>
    <type>Text</type>
</CustomField>