force-app/main/default/objects/SalesManagement__c/fields/TakeUpDate__c.field-meta.xml
<CustomField>
    <fullName>TakeUpDate__c</fullName>
    <description>与儀</description>
    <label>引取日</label>
    <type>Date</type>
</CustomField>