force-app/main/default/objects/SalesManagement__c/fields/tax_payment_refund_type__c.field-meta.xml
<CustomField>
    <fullName>tax_payment_refund_type__c</fullName>
    <description>自動車税の納付・返金区分を営業管理が選択する。山本</description>
    <label>自動車税納付・返金区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>納付・1年分</fullName>
            </value>
            <value>
                <fullName>納付・月割分</fullName>
            </value>
            <value>
                <fullName>返金・1年分</fullName>
            </value>
            <value>
                <fullName>返金・月割分</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>