force-app/main/default/objects/SalesManagement__c/fields/Taxable_amount__c.field-meta.xml
<CustomField>
    <fullName>Taxable_amount__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.Taxable_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10％対象（税込）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>