force-app/main/default/objects/SalesManagement__c/fields/TaxExcluded__c.field-meta.xml
<CustomField>
    <fullName>TaxExcluded__c</fullName>
    <formula>PurchaseOpportunity__r.TaxExcluded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>税別</label>
    <type>Checkbox</type>
</CustomField>