force-app/main/default/objects/SalesManagement__c/fields/TotalPayment__c.field-meta.xml
<CustomField>
    <fullName>TotalPayment__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.TotalPayment__c -  PurchaseOpportunity__r.invoice_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>支払合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>