force-app/main/default/objects/SalesManagement__c/fields/TotalPayment_ExcludingTax__c.field-meta.xml
<CustomField>
    <fullName>TotalPayment_ExcludingTax__c</fullName>
    <description>与儀</description>
    <formula>PurchaseOpportunity__r.TotalPayment_ExcludingTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>支払合計（税抜）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>