force-app/main/default/objects/SalesManagement__c/fields/Transfer_information__c.field-meta.xml
<CustomField>
    <fullName>Transfer_information__c</fullName>
    <description>山本</description>
    <label>振込案内</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>営業</fullName>
            </value>
            <value>
                <fullName>管理課</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>