force-app/main/default/objects/SalesManagement__c/fields/Transfer_information_method__c.field-meta.xml
<CustomField>
    <fullName>Transfer_information_method__c</fullName>
    <description>山本</description>
    <label>振込案内方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>電話</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>FAX</fullName>
            </value>
            <value>
                <fullName>営業</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>